# cabal-tests-rpath

./: foo.cabal
Data/: Foo.hs
tests/: Main.hs
